Closed Bug 661987 Opened 14 years ago Closed 14 years ago

Failed loadVirtualFolders causes tab registration to fail (so addons won't load)

Categories

(MailNews Core :: Account Manager, defect)

x86
Windows 7
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 8.0

People

(Reporter: rkent, Assigned: rkent)

Details

Attachments

(2 files, 1 obsolete file)

(This is a New Account Types issue) If I remove an addon that contains necessary registration information for virtual folders, and then remove that addon, then I get a failure in msqMail3PaneWindow.js ath: accountManager.loadVirtualFolders(); This error cascades to callers, eventually causing openSpecialTabsOnStartup() to fail, so that contentTabs do not get registered. And without contentTabs, the addon manager won't load, so you can't fix the root cause with the addon.
Assignee: nobody → kent
This gets contentTabs registered even if virtual folder loading fails.
STR: In a test profile, replace the virtualFolders.dat file with this file, which tries to load a virtual folder as the subfolder of a non-existent protocol type dummy:
In the former patch, if there is only a single virtual folder, which is invalid, then an error shows in the error console. No need for that, since these virtual folders are appearing on presumably non-existent servers. I think I would like to land this. It is low risk, and the consequences are quite devastating.
Attachment #548805 - Attachment is obsolete: true
Attachment #548848 - Flags: review?(dbienvenu)
Attachment #548848 - Flags: review?(dbienvenu) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 8.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: