bug 661987 - Failed loadVirtualFolders causes tab registration to fail, r=bienvenu